# cpp

./: .gitignore
Task02/: Account.cpp  Bank.cpp  CMakeLists.txt  MainTrain.cpp  Person.cpp  Transaction.cpp
Task03/: CMakeLists.txt  MainTrain.cpp  main.cpp  str.cpp  str.h
Task04/: CMakeLists.txt  Circle.cpp  Circle.h  MainTrain.cpp  Point.cpp  Point.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  Square.cpp  Square.h  allShapes.cpp  allShapes.h
